- Fixed issues when parents not in current contexts.
- Added parameter "&hideContainers=``" to both snippets.
- Added parameters "&tplWrapper=``" and "&wrapIfEmpty=``" to snippet mSearch2.
- Accelerated method mse2FiltersHandler::filterNumber().
- Fixed bug in filters, when TVs has capital letters in the name.

0.7.0 pl
==============
- Added support for list-style TVs.
- Fixed issues with pdoTools installation.

0.6.2 pl2
==============
- [mFilter2] New parameter "tpls" for change tpl of rows in request.
- [mFilter2] Fixed warning in log when no MS2 installed.
- [mFilter2] Fixed cache problem when retrieving products in multicategories, again.

0.6.1 pl
==============
- [mFilter2] Added support of old browsers without history api. They will use hash in url.

0.6.1 rc1
==============
- Added method mse2FiltersHandler::buildCategoriesFilter().
- Added method mse2FiltersHandler::buildFullnameFilter().
- Added ability to work with mSearch1 for smooth upgrade.
- Fixed bug with installation when "archive_with" setting is enabled.
- Improved work with MS2 multi categories.
- Fixed sort of filter values in ascending order.

0.6.0 beta
==============
- System setting "mse2_index_min_words_length" is set to 4 by default, for exclude prepositions.
- Numbers with length >= 2 are always in search, no matter what set in "mse2_index_min_words_length".
- Now mSearch2::getSuggestions() can be overloaded in class mse2FiltersHandler.
- [mFilter2] Added support for MS2 multi categories.
- [mFilter2] Added support for specify limit.
- [mFilter2] Added parameter "toPlaceholder".
- [mFilter2] Parameter "disableSuggestions" is now boolean "suggestions".
- [mFilter2] Added parameter "suggestionsMaxResults" for disable suggestions when too many results.
- [mFilter2] Added parameter "suggestionsMaxFilters" for disable suggestions when too many filters.
- [mFilter2] Added parameter "suggestionsRadio" for radio filters.
- [mFilter2] Added chunk "tpl.mFilter2.filter.radio".