@@ -9,6 +9,7 @@ Changelog for mSearch2.
 - Added parameters "&tplWrapper=``" and "&wrapIfEmpty=``" to snippet mSearch2.
 - Accelerated method mse2FiltersHandler::filterNumber().
 - Fixed bug in filters, when TVs has capital letters in the name.
+- [mFilter2] Added default implementation of "limit" parameter.
 
 0.7.0 pl
 ==============
